--- a/date/2025-03/page-3.htm
+++ b/date/2025-03/page-3.htm
@@ -115,6 +115,51 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-25">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/dbb125d5f2056af3c5a995d7c82225ac.webp" alt="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、韩国、新加坡、日本、加拿大、欧洲、美国等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/35cd59f6c9e33127c228b8be79274267.webp" alt="机器学习系列：LightGBM 可视化调参">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">机器学习系列：LightGBM 可视化调参</h3>
+                            </a>
+                            <p class="about_text">大家好，在100天搞定机器学习|Day63 彻底掌握 LightGBM一文中，我介绍了LightGBM 的模型原理和一个极简实例。最近我发现Huggingface与Streamlit好像更配，所以就开</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-80314.htm" title="ruby 版本管理RVM （ruby version manager）" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="ruby 版本管理RVM （ruby version manager）">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-80314.htm" title="ruby 版本管理RVM （ruby version manager）" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">ruby 版本管理RVM （ruby version manager）</h3>
+                            </a>
+                            <p class="about_text">macOS. 自带的ruby 版本目录权限比较高， 经常有很多 操作需要权限而不能执行   虽然 macOS 自带了一个 ruby 环境，但是是系统自己使用的，所以权限很小，只有 system。   </p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-03-24">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -220,53 +265,8 @@
                             <p class="about_text">这一次的节点更新覆盖了美国、新加坡、韩国、日本、加拿大、香港、欧洲等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-78292.htm" title="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/7c56d3b638aba64d8bf193713bd438d3.webp" alt="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-78292.htm" title="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）</h3>
-                            </a>
-                            <p class="about_text">摘要：       本篇文章给大家谈谈宠物猫疫苗多少钱一个针头，以及宠物猫接种疫苗多少钱对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫打疫苗多少钱?2、...       </p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/7c56d3b638aba64d8bf193713bd438d3.webp" alt="Apache Tomcat如何高并发处理请求">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">Apache Tomcat如何高并发处理请求</h3>
-                            </a>
-                            <p class="about_text">介绍 作为常用的http协议服务器，tomcat应用非常广泛。tomcat也是遵循Servelt协议的，Servelt协议可以让服务器与真实服务逻辑代码进行解耦。各自只需要关注Servlet协议即可。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/8eb9d9933ff3b2e0f7201530e522e98c.webp" alt="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、韩国、新加坡、香港、加拿大、欧洲、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                         
-                    <ul class="pagination"><li><a href="/date/2025-03/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-03/">1</a></li><li><a href="/date/2025-03/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/date/2025-03/page-4.htm">4</a></li><li><a href="/date/2025-03/page-5.htm">5</a></li><li><a href="/date/2025-03/page-6.htm">6</a></li><li><a href="/date/2025-03/page-7.htm">7</a></li> <li><a href="/date/2025-03/page-4.htm">&raquo;</a></li></ul>                </div>
+                    <ul class="pagination"><li><a href="/date/2025-03/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-03/">1</a></li><li><a href="/date/2025-03/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/date/2025-03/page-4.htm">4</a></li><li><a href="/date/2025-03/page-5.htm">5</a></li><li><a href="/date/2025-03/page-6.htm">6</a></li><li><a href="/date/2025-03/page-7.htm">7</a></li><li><a href="/date/2025-03/page-8.htm">8</a></li> <li><a href="/date/2025-03/page-4.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-24-free-high-speed-nodes.htm" title="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点">VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-78292.htm" title="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）">宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share-links.htm" title="VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-16-node-share-links.htm" title="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-81711.htm" title="中国农业大学动物医院怎么挂号（中国农业大学动物医院挂号费）">中国农业大学动物医院怎么挂号（中国农业大学动物医院挂号费）</a></li>
-                        <li class="py-2"><a href="/news/article-74884.htm" title="猫咪领养网广州（广州猫咪领养公众号）">猫咪领养网广州（广州猫咪领养公众号）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-node-subscribe.htm" title="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-83125.htm" title="动物防疫站周六周日上班吗（动物疫病预防控制中心周末上班吗）">动物防疫站周六周日上班吗（动物疫病预防控制中心周末上班吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点">VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-79647.htm" title="动物医院需要几个兽医资格证才能进行体检（动物医院要求）">动物医院需要几个兽医资格证才能进行体检（动物医院要求）</a></li>
+                        <li class="py-2"><a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）">宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-1-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点">VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-86702.htm" title="动物医院主管部门是谁负责（动物医院监管部门）">动物医院主管部门是谁负责（动物医院监管部门）</a></li>
+                        <li class="py-2"><a href="/news/article-71558.htm" title="宠物粮代理怎么拿（宠物粮代理加盟）">宠物粮代理怎么拿（宠物粮代理加盟）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-76221.htm" title="免费领养狗狗正规网站平台有哪些好 免费领养狗狗正规网站平台有哪些好的">免费领养狗狗正规网站平台有哪些好 免费领养狗狗正规网站平台有哪些好的</a></li>
+                        <li class="py-2"><a href="/news/article-73541.htm" title="动物疫苗使用方法视频（动物疫苗使用方法视频教程）">动物疫苗使用方法视频（动物疫苗使用方法视频教程）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-85271.htm" title="动物疫苗的重要性有哪些内容（动物疫苗的重要性有哪些内容呢）">动物疫苗的重要性有哪些内容（动物疫苗的重要性有哪些内容呢）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                     </ul>
     </div>
