--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -112,6 +112,51 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-2-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月2日22.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/9a0122327fa66b90ff72b270313cf8e6.webp" alt="VPN网关 | 4月2日22.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-2-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月2日22.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月2日22.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了新加坡、香港、加拿大、日本、美国、韩国、欧洲等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-01">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-1-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-1-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、日本、新加坡、加拿大、韩国、美国、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-31">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-31-free-high-speed-nodes.htm" title="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-31-free-high-speed-nodes.htm" title="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了日本、美国、加拿大、韩国、香港、新加坡、欧洲等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-03-30">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -217,51 +262,6 @@
                             <p class="about_text">这一次的节点更新覆盖了新加坡、美国、香港、日本、韩国、加拿大、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-23">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-23-free-node-subscribe-links.htm" title="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-23-free-node-subscribe-links.htm" title="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了加拿大、美国、日本、香港、新加坡、韩国、欧洲等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-22">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-22-free-node-subscribe.htm" title="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-22-free-node-subscribe.htm" title="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、新加坡、韩国、日本、加拿大、香港、欧洲等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/8eb9d9933ff3b2e0f7201530e522e98c.webp" alt="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、韩国、新加坡、香港、加拿大、欧洲、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                         
                     <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
@@ -272,15 +272,15 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）">宠物狗批发网站大全（宠物狗批发价格）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe-links.htm" title="VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-15-node-share-links.htm" title="VPN网关 | 3月15日19.1M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点">VPN网关 | 3月15日19.1M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-85270.htm" title="合肥宠物领养网站 合肥宠物领养网站有哪些">合肥宠物领养网站 合肥宠物领养网站有哪些</a></li>
+                        <li class="py-2"><a href="/news/article-73541.htm" title="动物疫苗使用方法视频（动物疫苗使用方法视频教程）">动物疫苗使用方法视频（动物疫苗使用方法视频教程）</a></li>
+                        <li class="py-2"><a href="/news/article-70258.htm" title="动物疫苗接种方法及注意事项有哪些 动物疫苗接种方法及注意事项有哪些呢">动物疫苗接种方法及注意事项有哪些 动物疫苗接种方法及注意事项有哪些呢</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-node-subscribe-links.htm" title="VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
                         <li class="py-2"><a href="/news/article-74202.htm" title="PYQT5(13)-基本窗口控件-拖曳与剪贴板">PYQT5(13)-基本窗口控件-拖曳与剪贴板</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-26-free-node-subscribe-links.htm" title="VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点">VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-69975.htm" title="济南宠物领养群（济南领养动物）">济南宠物领养群（济南领养动物）</a></li>
-                        <li class="py-2"><a href="/news/article-72880.htm" title="Docker极简入门：使用Docker-Compose 搭建redis集群">Docker极简入门：使用Docker-Compose 搭建redis集群</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-82404.htm" title="狗粮加工厂利润成本分析图表（狗粮加工厂需要什么手续）">狗粮加工厂利润成本分析图表（狗粮加工厂需要什么手续）</a></li>
-                        <li class="py-2"><a href="/news/article-75559.htm" title="给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）">给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-76221.htm" title="免费领养狗狗正规网站平台有哪些好 免费领养狗狗正规网站平台有哪些好的">免费领养狗狗正规网站平台有哪些好 免费领养狗狗正规网站平台有哪些好的</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点">VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-72218.htm" title="农大动物医院几点关门 农大动物医院几点关门营业">农大动物医院几点关门 农大动物医院几点关门营业</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share-links.htm" title="VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +292,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">69</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                     </ul>
     </div>
