--- a/client.htm
+++ b/client.htm
@@ -278,16 +278,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-70891.htm" title="动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）">动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）</a></li>
-                        <li class="py-2"><a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）">宠物狗批发网站大全（宠物狗批发价格）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe-links.htm" title="VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-82403.htm" title="农业大学动物医院预约挂号 农业大学动物医院门诊时间">农业大学动物医院预约挂号 农业大学动物医院门诊时间</a></li>
-                        <li class="py-2"><a href="/news/article-84553.htm" title="猫三联一针有用吗（猫三联是打一针就给一针的钱吗）">猫三联一针有用吗（猫三联是打一针就给一针的钱吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-87422.htm" title="从JS执行栈角度图解递归以及二叉树的前、中、后遍历的底层差异 _在线工具">从JS执行栈角度图解递归以及二叉树的前、中、后遍历的底层差异 _在线工具</a></li>
-                        <li class="py-2"><a href="/news/article-71558.htm" title="宠物粮代理怎么拿（宠物粮代理加盟）">宠物粮代理怎么拿（宠物粮代理加盟）</a></li>
-                        <li class="py-2"><a href="/news/article-74202.htm" title="PYQT5(13)-基本窗口控件-拖曳与剪贴板">PYQT5(13)-基本窗口控件-拖曳与剪贴板</a></li>
+                        <li class="py-2"><a href="/news/article-81711.htm" title="中国农业大学动物医院怎么挂号（中国农业大学动物医院挂号费）">中国农业大学动物医院怎么挂号（中国农业大学动物医院挂号费）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
+                        <li class="py-2"><a href="/news/article-85271.htm" title="动物疫苗的重要性有哪些内容（动物疫苗的重要性有哪些内容呢）">动物疫苗的重要性有哪些内容（动物疫苗的重要性有哪些内容呢）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-23-free-node-subscribe-links.htm" title="VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">VPN网关 | 3月23日21.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-78943.htm" title="猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）">猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）</a></li>
+                        <li class="py-2"><a href="/news/article-88145.htm" title="致美丽的你 电视剧（致美丽的你 电视剧在线观看）">致美丽的你 电视剧（致美丽的你 电视剧在线观看）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-6-free-v2ray-subscribe.htm" title="VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-high-speed-nodes.htm" title="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点">VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-86701.htm" title="Android Studio之菜单栏制作">Android Studio之菜单栏制作</a></li>
                     </ul>
     </div>
 </div>
@@ -299,7 +299,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
