--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -141,16 +141,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-76900.htm" title="宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）">宠物粮食专卖店在哪里进货（宠物粮食专卖店在哪里进货好）</a></li>
-                        <li class="py-2"><a href="/news/article-85991.htm" title="瑞鹏宠物医院有限公司（瑞鹏宠物医院成立时间）">瑞鹏宠物医院有限公司（瑞鹏宠物医院成立时间）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share-links.htm" title="VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求">Apache Tomcat如何高并发处理请求</a></li>
-                        <li class="py-2"><a href="/news/article-81710.htm" title="动物疫苗gmp认证（动物疫苗gmp认证查询）">动物疫苗gmp认证（动物疫苗gmp认证查询）</a></li>
-                        <li class="py-2"><a href="/news/article-86701.htm" title="Android Studio之菜单栏制作">Android Studio之菜单栏制作</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-high-speed-nodes.htm" title="VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月31日20M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-9-node-share-links.htm" title="VPN网关 | 3月9日18.1M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月9日18.1M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-76220.htm" title="python中脚本怎么执行sql语句？">python中脚本怎么执行sql语句？</a></li>
+                        <li class="py-2"><a href="/news/article-87421.htm" title="设计模式学习笔记桥接模式及其应用">设计模式学习笔记桥接模式及其应用</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-node-share-links.htm" title="VPN网关 | 4月4日22.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点">VPN网关 | 4月4日22.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-69974.htm" title="宠物领养数据库设计图片（宠物领养数据库设计图片）">宠物领养数据库设计图片（宠物领养数据库设计图片）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点">VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-85270.htm" title="合肥宠物领养网站 合肥宠物领养网站有哪些">合肥宠物领养网站 合肥宠物领养网站有哪些</a></li>
                         <li class="py-2"><a href="/news/article-84553.htm" title="猫三联一针有用吗（猫三联是打一针就给一针的钱吗）">猫三联一针有用吗（猫三联是打一针就给一针的钱吗）</a></li>
+                        <li class="py-2"><a href="/news/article-81711.htm" title="中国农业大学动物医院怎么挂号（中国农业大学动物医院挂号费）">中国农业大学动物医院怎么挂号（中国农业大学动物医院挂号费）</a></li>
+                        <li class="py-2"><a href="/news/article-70891.htm" title="动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）">动物医院诊疗许可证办理流程图片大全视频（动物医院诊疗程序）</a></li>
+                        <li class="py-2"><a href="/news/article-74202.htm" title="PYQT5(13)-基本窗口控件-拖曳与剪贴板">PYQT5(13)-基本窗口控件-拖曳与剪贴板</a></li>
                     </ul>
     </div>
 </div>
@@ -162,7 +162,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
