--- a/free-nodes/2025-4-5-free-v2ray-subscribe.htm
+++ b/free-nodes/2025-4-5-free-v2ray-subscribe.htm
@@ -139,6 +139,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅文件链接</h2><p>&nbsp;</p><p><strong>Clash订阅链接</strong></p><p>https://vpngateway.github.io/uploads/2025/04/0-20250405.yaml</p><p>https://vpngateway.github.io/uploads/2025/04/1-20250405.yaml</p><p>https://vpngateway.github.io/uploads/2025/04/2-20250405.yaml</p><p>https://vpngateway.github.io/uploads/2025/04/3-20250405.yaml</p><p>https://vpngateway.github.io/uploads/2025/04/4-20250405.yaml</p><p>&nbsp;</p><p><strong>V2ray订阅链接:</strong></p><p>https://vpngateway.github.io/uploads/2025/04/0-20250405.txt</p><p>https://vpngateway.github.io/uploads/2025/04/2-20250405.txt</p><p>https://vpngateway.github.io/uploads/2025/04/4-20250405.txt</p><p><strong>Sing-Box订阅链接</strong></p><p>https://vpngateway.github.io/uploads/2025/04/20250405.json</p><h2>使用必看</h2><p>&nbsp;</p><p>全部节点信息均来自互联网收集，且用且珍惜，推荐机场：「<a href="javascript:;" class="js_to" data-url="https://eded.keley02.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" rel="nofollow noopener" style="color:#c00;">可乐云</a> 」。仅针对用于学习研究的用户分享，请勿随意传播其他信息。免费节点有效时间比较短，遇到失效是正常现象。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-4-4-node-share-links.htm">VPN网关 | 4月4日22.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-4-6-free-v2ray-subscribe.htm">VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -167,16 +168,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-72217.htm" title="动物接种疫苗后多久产生抗体?（动物疫苗间隔时间）">动物接种疫苗后多久产生抗体?（动物疫苗间隔时间）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-v2ray.htm" title="VPN网关 | 3月10日19.3M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月10日19.3M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-24-free-high-speed-nodes.htm" title="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点">VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-8-node-share.htm" title="VPN网关 | 3月8日20.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享">VPN网关 | 3月8日20.9M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点分享</a></li>
-                        <li class="py-2"><a href="/news/article-83844.htm" title="vuex几大模块和Vuex助手使用详解">vuex几大模块和Vuex助手使用详解</a></li>
-                        <li class="py-2"><a href="/news/article-75559.htm" title="给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）">给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-72881.htm" title="动物疫苗哪个好 动物疫苗品牌">动物疫苗哪个好 动物疫苗品牌</a></li>
-                        <li class="py-2"><a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参">机器学习系列：LightGBM 可视化调参</a></li>
-                        <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
-                        <li class="py-2"><a href="/news/article-87422.htm" title="从JS执行栈角度图解递归以及二叉树的前、中、后遍历的底层差异 _在线工具">从JS执行栈角度图解递归以及二叉树的前、中、后遍历的底层差异 _在线工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" title="VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月13日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-89597.htm" title="Amazing巧用 CSS 视差实现酷炫交互动效详解">Amazing巧用 CSS 视差实现酷炫交互动效详解</a></li>
+                        <li class="py-2"><a href="/news/article-88145.htm" title="致美丽的你 电视剧（致美丽的你 电视剧在线观看）">致美丽的你 电视剧（致美丽的你 电视剧在线观看）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点">VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-81045.htm" title="你确定你会用Enum枚举了？">你确定你会用Enum枚举了？</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe-links.htm" title="VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-88864.htm" title="宠物领养数据库设计 宠物领养数据库设计方案">宠物领养数据库设计 宠物领养数据库设计方案</a></li>
+                        <li class="py-2"><a href="/news/article-72880.htm" title="Docker极简入门：使用Docker-Compose 搭建redis集群">Docker极简入门：使用Docker-Compose 搭建redis集群</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-15-node-share-links.htm" title="VPN网关 | 3月15日19.1M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点">VPN网关 | 3月15日19.1M/S|免费Shadowrocket/Clash/V2ray/SSR订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -188,7 +189,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
