--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -112,6 +112,51 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-08">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-8-free-v2ray.htm" title="VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/f473c41fc227da7d258e0f7572adbd50.webp" alt="VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-8-free-v2ray.htm" title="VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了日本、新加坡、欧洲、韩国、香港、加拿大、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-07">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-7-free-high-speed-nodes.htm" title="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/ab599ebafb70ed96cc9f2fcd546d435d.webp" alt="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-7-free-high-speed-nodes.htm" title="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了日本、韩国、香港、新加坡、欧洲、加拿大、美国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-6-free-v2ray-subscribe.htm" title="VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/ed216feb620e857e62e319edb7810fbd.webp" alt="VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-6-free-v2ray-subscribe.htm" title="VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了欧洲、新加坡、加拿大、美国、日本、韩国、香港等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-04-05">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -217,53 +262,8 @@
                             <p class="about_text">这一次的节点更新覆盖了韩国、日本、香港、加拿大、新加坡、欧洲、美国等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-28">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、日本、新加坡、韩国、加拿大、欧洲、香港等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-27">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-27-free-node-subscribe-links.htm" title="VPN网关 | 3月27日18.3M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/8945162c010840446e9af908a3d6269d.webp" alt="VPN网关 | 3月27日18.3M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-27-free-node-subscribe-links.htm" title="VPN网关 | 3月27日18.3M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月27日18.3M/S|免费V2ray/Shadowrocket/Clash/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了韩国、美国、新加坡、日本、加拿大、欧洲、香港等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-26">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-26-free-node-subscribe-links.htm" title="VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/35cd59f6c9e33127c228b8be79274267.webp" alt="VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-26-free-node-subscribe-links.htm" title="VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了欧洲、美国、韩国、日本、香港、新加坡、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                         
-                    <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                </div>
+                    <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -271,16 +271,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-76221.htm" title="免费领养狗狗正规网站平台有哪些好 免费领养狗狗正规网站平台有哪些好的">免费领养狗狗正规网站平台有哪些好 免费领养狗狗正规网站平台有哪些好的</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-1-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点">VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-84553.htm" title="猫三联一针有用吗（猫三联是打一针就给一针的钱吗）">猫三联一针有用吗（猫三联是打一针就给一针的钱吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-88145.htm" title="致美丽的你 电视剧（致美丽的你 电视剧在线观看）">致美丽的你 电视剧（致美丽的你 电视剧在线观看）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share-links.htm" title="VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-72880.htm" title="Docker极简入门：使用Docker-Compose 搭建redis集群">Docker极简入门：使用Docker-Compose 搭建redis集群</a></li>
-                        <li class="py-2"><a href="/news/article-84552.htm" title="RabbitMQ数据同步一致性解决方案">RabbitMQ数据同步一致性解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-78943.htm" title="猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）">猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）</a></li>
-                        <li class="py-2"><a href="/news/article-83124.htm" title="深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询">深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询</a></li>
+                        <li class="py-2"><a href="/news/article-69975.htm" title="济南宠物领养群（济南领养动物）">济南宠物领养群（济南领养动物）</a></li>
+                        <li class="py-2"><a href="/news/article-88864.htm" title="宠物领养数据库设计 宠物领养数据库设计方案">宠物领养数据库设计 宠物领养数据库设计方案</a></li>
+                        <li class="py-2"><a href="/news/article-87421.htm" title="设计模式学习笔记桥接模式及其应用">设计模式学习笔记桥接模式及其应用</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点">VPN网关 | 3月29日20.3M/S|免费Clash/V2ray/SSR/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-88144.htm" title="webpack 执行npm run 时，因为版本依赖报的那些错">webpack 执行npm run 时，因为版本依赖报的那些错</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-16-node-share-links.htm" title="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-high-speed-nodes.htm" title="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点">VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参">机器学习系列：LightGBM 可视化调参</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
                     </ul>
     </div>
 </div>
@@ -292,7 +292,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
