--- a/index.html
+++ b/index.html
@@ -125,7 +125,52 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
-                                         <div class="row item xcblog-blog-item" data-date="2025-04-05">
+                                         <div class="row item xcblog-blog-item" data-date="2025-04-08">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-8-free-v2ray.htm" title="VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/f473c41fc227da7d258e0f7572adbd50.webp" alt="VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-8-free-v2ray.htm" title="VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月8日21.6M/S|免费SSR/Shadowrocket/V2ray/Clash订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了日本、新加坡、欧洲、韩国、香港、加拿大、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-07">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-7-free-high-speed-nodes.htm" title="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/ab599ebafb70ed96cc9f2fcd546d435d.webp" alt="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-7-free-high-speed-nodes.htm" title="VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月7日22.4M/S|免费Shadowrocket/SSR/V2ray/Clash订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了日本、韩国、香港、新加坡、欧洲、加拿大、美国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-4-6-free-v2ray-subscribe.htm" title="VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/ed216feb620e857e62e319edb7810fbd.webp" alt="VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-4-6-free-v2ray-subscribe.htm" title="VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 4月6日21.5M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了欧洲、新加坡、加拿大、美国、日本、韩国、香港等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-04-05">
                         <div class="col-md-3">
                             <div class="about_img">
                                 <a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" title="VPN网关 | 4月5日19M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点" class="xcblog-blog-url">
@@ -380,51 +425,6 @@
                             <p class="about_text">这一次的节点更新覆盖了加拿大、欧洲、韩国、香港、美国、日本、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-18">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了日本、加拿大、香港、欧洲、韩国、新加坡、美国等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-17">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-17-free-node-subscribe-links.htm" title="VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/2c41239ac39028609af4b6e4c787f732.webp" alt="VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-17-free-node-subscribe-links.htm" title="VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了新加坡、加拿大、韩国、香港、日本、美国、欧洲等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-16">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-16-node-share-links.htm" title="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/f473c41fc227da7d258e0f7572adbd50.webp" alt="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-16-node-share-links.htm" title="VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月16日22.7M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了新加坡、欧洲、香港、韩国、加拿大、美国、日本等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
                                     </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -433,16 +433,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-79647.htm" title="动物医院需要几个兽医资格证才能进行体检（动物医院要求）">动物医院需要几个兽医资格证才能进行体检（动物医院要求）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-1-clash-v2ray-ss-ssr.htm" title="VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点">VPN网关 | 4月1日19.6M/S|免费Clash/SSR/V2ray/Shadowrocket订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-83124.htm" title="深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询">深圳宠物领养中心电话地址 深圳宠物领养中心电话地址查询</a></li>
-                        <li class="py-2"><a href="/news/article-70259.htm" title="中国餐桌上的四大下酒菜是什么?（怎么可以错过）中华四大下酒菜，红高粱剧情，食功夫之美食大冒险，">中国餐桌上的四大下酒菜是什么?（怎么可以错过）中华四大下酒菜，红高粱剧情，食功夫之美食大冒险，</a></li>
-                        <li class="py-2"><a href="/news/article-84552.htm" title="RabbitMQ数据同步一致性解决方案">RabbitMQ数据同步一致性解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求">Apache Tomcat如何高并发处理请求</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-4-node-share-links.htm" title="VPN网关 | 4月4日22.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点">VPN网关 | 4月4日22.3M/S|免费V2ray/Clash/Shadowrocket/SSR订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-18-free-node-subscribe.htm" title="VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点">VPN网关 | 3月18日19.9M/S|免费Clash/V2ray/Shadowrocket/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-73541.htm" title="动物疫苗使用方法视频（动物疫苗使用方法视频教程）">动物疫苗使用方法视频（动物疫苗使用方法视频教程）</a></li>
+                        <li class="py-2"><a href="/news/article-85991.htm" title="瑞鹏宠物医院有限公司（瑞鹏宠物医院成立时间）">瑞鹏宠物医院有限公司（瑞鹏宠物医院成立时间）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-28-free-high-speed-nodes.htm" title="VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点">VPN网关 | 3月28日20.5M/S|免费Shadowrocket/V2ray/SSR/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-75558.htm" title="宠物粮行业发展趋势图表（宠物粮食市场前景）">宠物粮行业发展趋势图表（宠物粮食市场前景）</a></li>
+                        <li class="py-2"><a href="/news/article-81045.htm" title="你确定你会用Enum枚举了？">你确定你会用Enum枚举了？</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share-links.htm" title="VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe-links.htm" title="VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点">VPN网关 | 3月12日19.3M/S|免费Clash/Shadowrocket/SSR/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-node-subscribe-links.htm" title="VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月17日22.1M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-78943.htm" title="猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）">猫咪打疫苗多少一针啊（猫咪打疫苗多少一针啊图片）</a></li>
                     </ul>
     </div>
 </div>
@@ -454,7 +454,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
